--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,16 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
-
+    "types": [
+      "mocha"
+    ],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -14,26 +20,55 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@adapters/*": ["./src/adapters/*"], 
-      "@components/*": ["./src/components/*"],
-      "@context/*": ["./src/context/*"],
-      "@intercepts/*": ["./src/intercepts/*"],
-      "@hook/*": ["./src/hook/*"],
-      "@models/*": ["./src/models/*"],
-      "@pages/*": ["./src/pages/*"],
-      "@rdx/*": ["./src/redux/*"],
-      "@services/*": ["./src/services/*"],
-      "@utilities/*": ["./src/utilities/*"],
-      "@styled/*":["./src/styled-components/*"],
-      "@fireBS/*": ["./src/firebase/*"]
+      "@adapters/*": [
+        "./src/adapters/*"
+      ],
+      "@components/*": [
+        "./src/components/*"
+      ],
+      "@context/*": [
+        "./src/context/*"
+      ],
+      "@intercepts/*": [
+        "./src/intercepts/*"
+      ],
+      "@hook/*": [
+        "./src/hook/*"
+      ],
+      "@models/*": [
+        "./src/models/*"
+      ],
+      "@pages/*": [
+        "./src/pages/*"
+      ],
+      "@rdx/*": [
+        "./src/redux/*"
+      ],
+      "@services/*": [
+        "./src/services/*"
+      ],
+      "@utilities/*": [
+        "./src/utilities/*"
+      ],
+      "@styled/*": [
+        "./src/styled-components/*"
+      ],
+      "@fireBS/*": [
+        "./src/firebase/*"
+      ]
     },
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
